5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_1559.log
== TEST (2019-03-12 17:04:35) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.".upper???)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.".upper???)
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:04:38) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.".upper???)
-- EXECUTION TIME:
0.216304
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.".upper???)
                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:05:03) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.upper)
-- EXECUTION TIME:
0.143575
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper)
                                                                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:05:18) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.upper()
-- EXECUTION TIME:
0.165745
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper()
                                                                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:05:21) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.upper()
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia.upper()
                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:02:22) 
-- CODE:
frase = ""
print(Ada Lovelace foi a primeira programadora da historia.)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:04:13) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia".)
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:04:18) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".)
-- EXECUTION TIME:
0.202754
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print("Ada Lovelace foi a primeira programadora da historia".)
                                                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:04:26) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia".)
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:04:27) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia".)
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:04:27) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia".)
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:04:27) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia".)
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:04:27) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print("Ada Lovelace foi a primeira programadora da historia".)
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:05:16) 
-- CODE:
frase = ""
print(.upper("Ada Lovelace foi a primeira programadora da historia".))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia".))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:05:20) 
-- CODE:
frase = ""
print(.upper("Ada Lovelace foi a primeira programadora da historia".))
-- EXECUTION TIME:
0.172531
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia".))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:05:22) 
-- CODE:
frase = ""
print(.upper("Ada Lovelace foi a primeira programadora da historia".))
-- EXECUTION TIME:
0.13547
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia".))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:05:22) 
-- CODE:
frase = ""
print(.upper("Ada Lovelace foi a primeira programadora da historia".))
-- EXECUTION TIME:
0.0961659
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1559/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:05:22) 
-- CODE:
frase = ""
print(.upper("Ada Lovelace foi a primeira programadora da historia".))
-- EXECUTION TIME:
0.125806
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia".))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:05:22) 
-- CODE:
frase = ""
print(.upper("Ada Lovelace foi a primeira programadora da historia".))
-- EXECUTION TIME:
0.102787
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia".))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:05:41) 
-- CODE:
frase = ""
print.upper("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print.upper("Ada Lovelace foi a primeira programadora da historia".)
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:05:44) 
-- CODE:
frase = ""
print.upper("Ada Lovelace foi a primeira programadora da historia".)
-- EXECUTION TIME:
0.201014
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print.upper("Ada Lovelace foi a primeira programadora da historia".)
                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:08:46) 
-- CODE:
frase = ""
print.upper("Ada Lovelace foi a primeira programadora da historia".)
-- ERROR:
File "XXXX", line 2
    print.upper("Ada Lovelace foi a primeira programadora da historia".)
                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:09:03) 
-- CODE:
frase = ""
print.(upper("Ada Lovelace foi a primeira programadora da historia".))
-- ERROR:
File "XXXX", line 2
    print.(upper("Ada Lovelace foi a primeira programadora da historia".))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:09:47) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f239c5889f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:10:05) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.upper")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:10:07) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.upper")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:10:17) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.upper")
-- EXECUTION TIME:
0.116205
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
Ada Lovelace foi a primeira programadora da historia.upper
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:10:39) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7fb8a74a59f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:10:53) 
-- CODE:
frase = ""
print("Ada Lovelace foi a primeira programadora da historia.")
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:13:22) 
-- CODE:
frase = ""
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:13:28) 
-- CODE:
frase = ""
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- EXECUTION TIME:
0.161787
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:13:31) 
-- CODE:
frase = ""
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:13:39) 
-- CODE:
frase = ""
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- EXECUTION TIME:
0.167374
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:14:32) 
-- CODE:
frase = ""
print.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:14:53) 
-- CODE:
frase = ""
print.("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- ERROR:
File "XXXX", line 2
    print.("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:15:04) 
-- CODE:
frase = ""
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:17:59) 
-- CODE:
frase = ""
print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
-- ERROR:
File "XXXX", line 2
    print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 22:18:00) 
-- CODE:
frase = ""
print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
-- EXECUTION TIME:
0.145125
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 22:41:29) 
-- CODE:
frase = ""
print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
-- ERROR:
File "XXXX", line 2
    print(.upper("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:43:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:43:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.187858
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
